crates/pardosa-schema/tests/compile_fail/evt_013_via_alias.rs
use pardosa_schema::GenomeSafe;
use serde::Serialize;
type Callback = fn(u32) -> u32;
#[derive(Serialize, GenomeSafe)]
struct BadStruct {
    f: Callback,
}
fn main() {}
