crates/pardosa-schema/tests/compile_fail/evt_013_via_alias.stderr
error[E0277]: the trait bound `fn(u32) -> u32: serde::Serialize` is not satisfied
 --> tests/compile_fail/evt_013_via_alias.rs:4:10
  |
4 | #[derive(Serialize, GenomeSafe)]
  |          ^^^^^^^^^ the trait `Serialize` is not implemented for `fn(u32) -> u32`
5 | struct BadStruct {
6 |     f: Callback,
  |     - required by a bound introduced by this call
  |
  = note: for local types consider adding `#[derive(serde::Serialize)]` to your `fn(u32) -> u32` type
  = note: for types from other crates check whether the crate offers a `serde` feature flag
note: required by a bound in `_serde::ser::SerializeStruct::serialize_field`
 --> $CARGO/serde_core-$VERSION/src/ser/mod.rs
  |
  |     fn serialize_field<T>(&mut self, key: &'static str, value: &T) -> Result<(), Self::Error>
  |        --------------- required by a bound in this associated function
  |     where
  |         T: ?Sized + Serialize;
  |                     ^^^^^^^^^ required by this bound in `SerializeStruct::serialize_field`
  = note: this error originates in the derive macro `Serialize` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `fn(u32) -> u32: GenomeSafe` is not satisfied
 --> tests/compile_fail/evt_013_via_alias.rs:6:8
  |
6 |     f: Callback,
  |        ^^^^^^^^ the trait `GenomeSafe` is not implemented for `fn(u32) -> u32`

error[E0277]: the trait bound `fn(u32) -> u32: Encode` is not satisfied
 --> tests/compile_fail/evt_013_via_alias.rs:4:21
  |
4 | #[derive(Serialize, GenomeSafe)]
  |                     ^^^^^^^^^^ the trait `Encode` is not implemented for `fn(u32) -> u32`
  |
  = note: this error originates in the derive macro `GenomeSafe` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `fn(u32) -> u32: Decode` is not satisfied
 --> tests/compile_fail/evt_013_via_alias.rs:6:8
  |
6 |     f: Callback,
  |        ^^^^^^^^ the trait `Decode` is not implemented for `fn(u32) -> u32`
